# telegram_analyzer

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
frontend/: tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Navbar.tsx  ThemeToggle.tsx  index.ts
static/css/: theme.css
static/js/: theme.js
telegram_analyzer_app/: asgi.py  logging_utils.py  settings.py  urls.py  wsgi.py
telegram_functionality/: admin.py  analytics.py  apps.py  forms.py  models.py  services.py  urls.py  views.py  views_advanced.py
telegram_functionality/migrations/: 0001_initial.py  0002_telegramchat_is_pinned_telegramchat_last_full_sync_and_more.py  0003_synctask.py  0004_telegrammessage_media_duration_and_more.py  0005_multi_session_support.py  0006_chatfolder_deletionalertconfig_keywordalert_and_more.py  0007_telegramuser_chatmembership_and_more.py  0008_synctask_synced_users.py
telegram_functionality/templates/telegram_functionality/: all_messages.html  bulk_download.html  chat_list.html  chat_messages.html  connect.html  dashboard.html  deleted_messages.html  home.html  search.html  search_chats.html  sessions.html  sync_history.html  sync_status.html  verify_2fa.html  verify_code.html
templates/: base.html
templates/includes/: footer.html  navbar.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/static/users/css/: auth.css
users/templates/users/: delete_account.html  login.html  profile.html  register.html
(+36 files in other folders)
