[project]
name = "telegram-analyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "psycopg2>=2.9.11",
    "python-decouple>=3.8",
    "telethon>=1.42.0",
    "tgcrypto>=1.2.5",
    "pillow>=11.0.0",
    "cryptography>=46.0.3",
    "django-vite>=3.1.0",
]
